2011-08-31         John Haque     <j.eh@mchsi.com>

	* arrayparm.c, filefuncs.c, fork.c, ordchr.c, readfile.c,
	rwarray.c, testarg.c: Updated.

2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.1: Release tar ball made.

2011-06-23         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog.0: Rotated ChangeLog into this file.
	* ChangeLog: Created anew for gawk 4.0.0 and on.
	* 4.0.0: Release tar ball made.