@@ -1,3 +1,8 @@
+2011-04-24         John Haque     <j.eh@mchsi.com>
+
+	* spec_array.c, spec_array.h, sparr.c, testsparr.awk: New files.
+	* steps: Updated.
+
 2011-08-31         John Haque     <j.eh@mchsi.com>
 
 	* arrayparm.c, filefuncs.c, fork.c, ordchr.c, readfile.c,
